--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
         "date-fns": "^3.6.0",
         "framer-motion": "^11.0.14",
         "lucide-react": "^0.363.0",
-        "next": "14.1.4",
+        "next": "^16.1.0",
         "next-themes": "^0.4.6",
-        "react": "^18",
+        "react": "^19.2.3",
         "react-day-picker": "^8.10.0",
-        "react-dom": "^18",
+        "react-dom": "^19.2.3",
         "react-hook-form": "^7.51.1",
         "recharts": "^2.12.3",
         "tailwind-merge": "^2.2.2",
@@ -37,8 +37,8 @@
     },
     "devDependencies": {
         "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.1.4",
