--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
         "postcss": "^8",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
+    },
+    "overrides": {
+        "react": "$react",
+        "react-dom": "$react-dom"
     }
 }
