--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@radix-ui/react-slider": "^1.2.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@supabase/ssr": "^0.8.0",
         "@supabase/supabase-js": "^2.39.8",
         "@tanstack/react-query": "^5.28.4",
         "class-variance-authority": "^0.7.0",
